# qr-scanner

./: .gitignore  CMakeLists.txt  README.md
include/: QRScanner.hpp
resources/: qrGen.py
src/: QRScanner.cpp  main.cpp
